# franka_impedance_controller

./: CMakeLists.txt  README.md  franka_impedance_controller_plugin.xml  package.xml  setup_gazebo.py
cfg/: compliance_param.cfg  desired_mass_param.cfg
config/: franka_robothon_controllers.yaml
franka_human_control/: CMakeLists.txt
franka_human_control/python/LfD/: Learning_from_demonstration.py  board_coordinates_extraction.py  data-2022-06-21-15-49.csv  data-2022-06-21-16-11.npy  record_traject.py  recorded_grip_key_grab_turn.npy  recorded_ori_key_grab_turn.npy  recorded_traj_key_grab_turn.npy  teleoperation.py
franka_human_control/python/LfD/data/: ;in_traj.npz  PUSH_BLUE_BUTTON.npz  battery_eject_pick.npz  button_press.npz  eject_battery_pick.npz  ethernet.npz  lin_traj.npz  test.npz  test_conf.npz  test_new_pose.npz  test_rot.npz  test_rot_mat.npz  test_rot_mat_new.npz
franka_human_control/src/: cartesian_variable_impedance_controller.cpp  cartesian_variable_impedance_controller.cpp.orig  franka_gripper_online.cpp
franka_smart_cartesian_impedance_control/: CMakeLists.txt  README.md  franka_robothon_controllers_plugin.xml  package.xml  setup_gazebo.py
franka_smart_cartesian_impedance_control/cfg/: compliance_param.cfg  desired_mass_param.cfg  fake_mass_param.cfg
franka_smart_cartesian_impedance_control/config/: camera_mass_param.yaml
franka_smart_cartesian_impedance_control/include/franka_human_friendly_controllers/: cartesian_variable_impedance_controller.h
franka_smart_cartesian_impedance_control/include/franka_robothon_controllers/: cartesian_variable_impedance_controller.h  pseudo_inversion.h
franka_smart_cartesian_impedance_control/launch/: franka_control.launch
franka_smart_cartesian_impedance_control/python/: mass_estimator.py
franka_smart_cartesian_impedance_control/src/: cartesian_variable_impedance_controller.cpp  franka_gripper_pick_place.cpp
franka_smart_cartesian_impedance_control/world/: stone.sdf
include/franka_impedance_controller/: cartesian_variable_impedance_controller.h
include/franka_robothon_controllers/: pseudo_inversion.h
launch/: cartesian_variable_impedance_controller.launch  franka_control.launch
python/: mass_estimator.py
src/: cartesian_variable_impedance_controller.cpp
